[package]
name = "distributed-hash-table"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
bytes = "1.4"
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
futures = "0.3"
sha2 = "0.10"
